# ruzip

./: .gitignore  .gitmessage  Cargo.toml  README.md  cliff.toml  deny.toml  release.toml
.githooks/: commit-msg  pre-commit
.github/workflows/: ci.yml  release.yml  validate-commits.yml
benches/: compression.rs  compression_algorithms.rs  memory_optimization.rs  simd_performance.rs  startup.rs
docs/: CONFIGURATION.md  DEVELOPMENT.md
docs/blueprint/: blueprint.md  rzip_tdd_strategy.md
src/: error.rs  lib.rs  main.rs
src/archive/: appender.rs  deleter.rs  entry.rs  format.rs  header.rs  mod.rs  modifier.rs  reader.rs  reconstructor.rs  validation.rs  writer.rs
src/cli/: commands.rs  commands_backup.rs  completion.rs  mod.rs  parser.rs
src/compression/: adaptive.rs  brotli.rs  engine.rs  level.rs  lz4.rs  mod.rs  stream.rs
src/crypto/: aes.rs  archive.rs  config.rs  error.rs  mod.rs  signature.rs  types.rs
src/memory/: mod.rs  pool.rs  profiler.rs  streaming.rs
src/platform/: bsd.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/simd/: compression.rs  hashing.rs  mod.rs
src/threading/: config.rs  mod.rs  pipeline.rs  pool.rs  progress.rs
src/utils/: config.rs  logging.rs  mod.rs
tests/chaos/: fault_injection.rs  mod.rs
tests/integration/: archive_operations.rs  basic_operations.rs  compression_algorithms.rs  concurrency_stress_tests.rs  crypto_archive_integration.rs  memory_optimization.rs  simd_integration.rs
