[package]
name = "ruzip"
version = "0.1.0"
edition = "2021"
authors = ["Fabian Schmieder"]
description = "A modern, fast, and secure compression tool built with Rust"
homepage = "https://github.com/metaneutros/ruzip"
repository = "https://github.com/metaneutrons/ruzip"
license = "GPL-3.0-or-later"
keywords = ["compression", "archive", "zstd", "encryption", "cli"]
categories = ["compression", "command-line-utilities"]
readme = "README.md"

[dependencies]
# CLI and user interface
clap = { version = "4.4", features = ["derive", "color", "suggestions"] }
clap_complete = "4.4"      # Shell completion generation
indicatif = { version = "0.17", optional = true }         # Progress bars
console = "0.15"           # Terminal utilities
async-trait = "0.1"        # Async traits
rpassword = "7.3"          # Secure password input

# Compression algorithms
zstd = "0.13"              # ZSTD compression
brotli = { version = "6.0", optional = true }
lz4_flex = { version = "0.11", optional = true }

# Cryptography
aes-gcm = { version = "0.10", optional = true }
argon2 = { version = "0.5", optional = true }
rand = { version = "0.8", optional = true }
zeroize = { version = "1.7", optional = true }

# Asymmetric cryptography and signatures  
rsa = { version = "0.9", optional = true }
ed25519-dalek = { version = "2.0", optional = true }
p256 = { version = "0.13", optional = true }
ring = { version = "0.17", optional = true }
pkcs8 = { version = "0.10", optional = true }
x509-parser = { version = "0.15", optional = true }

# File system operations
walkdir = "2.4"            # Recursive directory walking
filetime = "0.2"           # File timestamp handling
libc = "0.2"               # System permissions (Unix)
memmap2 = "0.9"            # Memory-mapped file I/O

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"            # Binary serialization
uuid = { version = "1.7", features = ["v4"] }

# Parallelization and async
rayon = "1.8"              # Data parallelism
tokio = { version = "1.35", features = ["full"], optional = true }

# Error handling and logging
anyhow = "1.0"             # Error handling
thiserror = "1.0"          # Custom error types
tracing = "0.1"            # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing and integrity
crc32fast = "1.4"          # CRC32 checksums
sha2 = "0.10"              # SHA-256 for integrity verification

# Configuration and environment
dirs = "5.0"               # Standard directories
toml = "0.8"               # Configuration files
num_cpus = "1.16"          # CPU core detection
atty = "0.2"               # TTY detection for colored output
hex = "0.4"                # Hex encoding/decoding
serde_json = "1.0"         # JSON serialization

# SIMD-optimization
wide = { version = "0.7", optional = true }               # Cross-platform SIMD
blake3 = { version = "1.5", optional = true }             # SIMD-optimized hashing

# OS-specific keychain/keystore integration
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2.9", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Cryptography"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3.0", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
proptest = "1.4"
assert_cmd = "2.0"
predicates = "3.0"

[features]
default = ["progress", "encryption", "asymmetric-crypto", "simd", "async"]
progress = ["indicatif"]
encryption = ["aes-gcm", "argon2", "rand", "zeroize"]
asymmetric-crypto = ["rsa", "ed25519-dalek", "p256", "ring", "pkcs8", "x509-parser"]
keychain-integration = ["security-framework", "windows", "secret-service"]
async = ["tokio"]
brotli-support = ["brotli"]
lz4-support = ["lz4_flex"]
all-compression = ["brotli-support", "lz4-support"]
simd = ["wide", "blake3"]

[[bin]]
name = "ruzip"
path = "src/main.rs"

[[bench]]
name = "startup"
harness = false

[[bench]]
name = "compression"
harness = false

[[bench]]
name = "simd_performance"
harness = false
required-features = ["simd"]

[[bench]]
name = "compression_algorithms"
harness = false
required-features = ["all-compression"]

[[bench]]
name = "memory_optimization"
harness = false

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
incremental = true
